ChangeLog
=========

Release: 1.4.1
===============================================================================
2024-01-05 Fixed bargraphs with an image.

2024-01-04 Added support for placeholder text in input lines.

2024-01-01 Added support for bargraph control buttons (+/-).

2023-12-22 Fixed speed and time calculation for bargraphs.

2023-12-13 Added joystick support.
           Added command ^GIV

2023-12-12 Completed the bargraphs by adding all possible level functions.

2023-12-06 Added command ^RPP to reset panel protect password
           Added support for reset of subpage when showed.

2023-12-05 Fixed broken FTP transfer.

2023-12-02 Fixed the borders of buttons.

2023-11-30 Added password support for Android and iOS.
           Added new commands ^PWD and @PWD.
           Added new commands ^LPB, ^LPC, ^LPR and ^LPS.

2023-11-28 Added support for password protection.

2023-11-25 Implemented Marquee lines completely.
           Added command ^MSP to set the speed of a marquee line.

2023-11-21 Fixed the battery state for iOS.

2023-11-19 Added marquee lines. Currently only left to right and vice versa is
           supported.

Release: 1.4.0
===============================================================================
2023-11-12 Added the commands ^GDI, ^GRD and ^GRU. Although this commands exist
           now, the TButton class does not honor them.

2023-10-28 Fixed bug: When there is no "sr" section on a page it doesn't crash
           any more.

2023-10-27 Added support for logfiles on Android.

2023-10-26 Added new refresh function for objects drawn during display was
           suspended.

2023-10-25 Changed behavior of bars on Android to appear only for a short time.

2023-10-15 Fixed compiling on Mac for OSX and Android. The build script for
           Android works now on Mac too.

2023-10-10 Fixed compiling for iOS.
           Fixed compiling for Android.
           Fixed compiling for Linux.

2023-10-01 Improved sound playing.
