@@ -4,37 +4,36 @@
 <dict>
 	<key>CFBundleIconName</key>
 	<string>AppIcon</string>
-	<key>CFBundleIcons</key>
+	<key>CFBundleIconFiles</key>
+	<array>
+		<string>AppIcon.png</string>
+		<string>AppIcon16x16.png</string>
+		<string>AppIcon29x29.png</string>
+		<string>AppIcon32x32.png</string>
+		<string>AppIcon40x40.png</string>
+		<string>AppIcon50x50.png</string>
+		<string>AppIcon58x58.png</string>
+		<string>AppIcon64x64.png</string>
+		<string>AppIcon72x72.png</string>
+		<string>AppIcon76x76.png</string>
+		<string>AppIcon80x80.png</string>
+		<string>AppIcon100x100.png</string>
+		<string>AppIcon114x114.png</string>
+		<string>AppIcon120x120.png</string>
+		<string>AppIcon128x128.png</string>
+		<string>AppIcon144x144.png</string>
+		<string>AppIcon152x152.png</string>
+		<string>AppIcon256x256.png</string>
+		<string>AppIcon512x512.png</string>
+		<string>AppIcon1024x1024.png</string>
+	</array>
+	<key>UILaunchScreen</key>
 	<dict>
-		<key>CFBundlePrimaryIcon</key>
-		<dict>
-			<key>CFBundleIconFiles</key>
-			<array>
-				<string>AppIcon.png</string>
-				<string>AppIcon16x16</string>
-				<string>AppIcon29x29.png</string>
-				<string>AppIcon32x32.png</string>
-				<string>AppIcon40x40.png</string>
-				<string>AppIcon50x50.png</string>
-				<string>AppIcon58x58.png</string>
-				<string>AppIcon64x64.png</string>
-				<string>AppIcon72x72.png</string>
-				<string>AppIcon76x76.png</string>
-				<string>AppIcon80x80.png</string>
-				<string>AppIcon100x100.png</string>
-				<string>AppIcon114x114.png</string>
-				<string>AppIcon120x120.png</string>
-				<string>AppIcon128x128.png</string>
-				<string>AppIcon144x144.png</string>
-				<string>AppIcon152x152.png</string>
-				<string>AppIcon256x256.png</string>
-				<string>AppIcon512x512.png</string>
-				<string>AppIcon1024x1024.png</string>
-			</array>
-		</dict>
+		<key>UIImageRespectsSafeAreaInsets</key>
+		<true/>
+		<key>UIImageName</key>
+		<string>LaunchImage-iOS7-568h@2x.png</string>
 	</dict>
-	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleDevelopmentRegion</key>
@@ -42,7 +41,7 @@
 	<key>CFBundleAllowMixedLocalizations</key>
 	<true/>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2022, 2023 by Andreas Theofilu &lt;andreas@theosys.at&gt;</string>
+	<string>Copyright © 2022 to 2024 by Andreas Theofilu &lt;andreas@theosys.at&gt;</string>
 	<key>LSApplicationCategoryType</key>
 	<string>6.0</string>
 	<key>BGTaskSchedulerPermittedIdentifiers</key>
@@ -64,15 +63,15 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.4</string>
 	<key>CFBundleVersion</key>
-	<string>1.4.0</string>
+	<string>1.4.1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>MinimumOSVersion</key>
 	<string>${IPHONEOS_DEPLOYMENT_TARGET}</string>
 	<key>NOTE</key>
 	<string>This file was generated by Qt/CMake.</string>
-    <key>NSLocationWhenInUseUsageDescription</key>
-    <string>The locations are only used to keep the application running in the
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>The locations are only used to keep the application running in the
             background. The location information is never used nor send to any
             server.
     </string>
